# newsflow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  DEPLOYMENT_READY.md  LICENSE  README.md  README_UPDATE.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_GUIDE.md  build.sh  dev.py  docker-compose.docs.yml  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js  test_recommendations.py
.github/workflows/: ci.yml
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
fixtures/: 001_categories.json  002_all_news_sources.json  004_all_article_categories.json  005_sample_users.json  006_user_profiles.json  007_user_interactions.json  008_user_preferences.json  README_FIXTURES.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
newsflow/: conftest.py
newsflow/contrib/: apps.py
newsflow/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
newsflow/contrib/templatetags/: nav_helpers.py
newsflow/news/: admin.py  apps.py  context_processors.py  search_urls.py  search_views.py  sentiment.py  serializers.py  summarizer.py  tasks.py  urls.py
newsflow/news/management/commands/: analyze_sentiment.py  build_search_vectors.py  generate_summaries.py  search_analytics.py
newsflow/news/migrations/: 0001_initial.py  0002_searchanalytics_article_search_vector_and_more.py  0003_alter_userpreference_options_and_more.py  0004_remove_userinteraction_unique_user_article_action_and_more.py  0005_likedarticle.py
newsflow/news/models/: __init__.py  article.py  bookmarks.py  category.py  news_source.py  search_analytics.py  user_interaction.py  user_preference.py
newsflow/news/templatetags/: news_tags.py
newsflow/news/views/: __init__.py  admin.py  api.py  bookmarks.py  category.py  dashboard.py  for_you.py  home.py  preferences.py  search.py  trending.py
newsflow/notifications/: adapters.py  admin.py  apps.py  models.py  services.py  signals.py  tasks.py
newsflow/notifications/management/commands/: setup_email_templates.py
newsflow/notifications/migrations/: 0001_initial.py
newsflow/recommendations/: analytics.py  apps.py  engine.py  filters.py  hybrid.py  tasks.py  urls.py
newsflow/recommendations/management/commands/: generate_test_data.py
newsflow/recommendations/views/: __init__.py  analytics.py  explore.py  personalized.py  similar.py  trending.py
newsflow/scrapers/: admin.py  api.py  apps.py  monitoring.py  services.py  tasks.py  urls.py  utils.py
newsflow/scrapers/management/commands/: load_initial_sources.py  scrape_news.py  validate_feeds.py
newsflow/scrapers/tests/: test_api.py  test_management_commands.py  test_services.py  test_tasks.py
newsflow/static/css/: input.css  output.css
newsflow/static/js/: newsflow.js
newsflow/templates/: base.html
newsflow/templates/account/: email.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
newsflow/templates/account/email/: unknown_account_message.html  unknown_account_message.txt  unknown_account_subject.txt
newsflow/templates/admin/dashboard/: analytics.html  base_admin.html  content.html  overview.html  search_analytics.html  users.html
newsflow/templates/allauth/layouts/: entrance.html
newsflow/templates/emails/: base_email.html  password_reset_email.html  password_reset_email.txt  verification_email.html  verification_email.txt  welcome_email.html  welcome_email.txt
newsflow/templates/includes/: profile_nav.html  theme_toggle.html
newsflow/templates/mfa/: index.html
newsflow/templates/news/: base_news.html  bookmarks.html  category_list.html  dashboard.html  for_you.html  index.html  preferences.html  search_results.html  trending.html
newsflow/templates/news/partials/: article_cards.html  autocomplete_suggestions.html  category_nav.html  filter_sidebar.html  infinite_scroll_content.html  infinite_scroll_end.html  mobile_sidebar_sheet.html  news_card_compact.html  news_card_primary.html  news_card_secondary.html  onboarding_modal.html  search_suggestions.html  share_modal.html  (+2 more)
newsflow/templates/users/: user_detail.html  user_form.html
newsflow/users/: adapters.py  admin.py  apps.py  context_processors.py  urls.py  views.py
newsflow/users/migrations/: 0001_initial.py  0002_userprofile_is_onboarded_and_more.py  0003_remove_userprofile_preferred_categories_and_more.py
newsflow/users/models/: __init__.py  profile.py  signals.py  user.py
newsflow/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_userprofile_models.py  test_views.py
utility/: install_python_dependencies.sh
